fix incorrect text and icon color in dark mode of light varient mobile header

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -171,7 +171,7 @@
     --topnav-dropdown-ripple-color: #ffffff;
   }
   @media (max-width: 600px) {
-    top.mobile-light {
+    .top.mobile-light {
       --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
       --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
       --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
